# pytrees

./: 404.html  LICENSE  README.md  bugtest.py  index.html  main.py  mkdocs.yml  nodetest.py  pyproject.toml
.github/workflows/: update-docs.yml
docs/: node.md
experimental/: nodetest.py  simplenode.py  simplenode2.py  simpletree.py  tree.py
getting_started/: index.html
installation_guide/: index.html
node/: index.html
pytrees/: basenode.py  node.py  simplenode.py  simpletree.py  tree.py
tree/: index.html
